Made Update function functionality and added Delete function to delete records in the database from the list with just one button

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -45,9 +45,11 @@
                         <%= products.productAmountSold%>
                     </td>
                     <td>
-                        <%= products.productAmountRemaining%>
+                        <%= (products.productAmountBought - products.productAmountSold )%>
                     </td>
                     <td><a class="ui purple button" href="/updateRecords/<%= products._id%>">Update</button>
+                    <td><a class="ui purple button" href="/delete/<%= products._id%>">Delete</button>
+
                     </td>
                 </tr>
                 <%})%>
