--- a/views/updateRecords.ejs
+++ b/views/updateRecords.ejs
@@ -18,9 +18,7 @@
             name="product_price">
         <input type="text" placeholder="Product Amount Sold" value="<%= Product.productAmountSold%>" name="product_sold"
             size="15">
-        <input type="text" placeholder="Product Amount Remaining" value="<%= Product.productAmountRemaining%>"
-            name="product_remaining" size="21">
-        <button type="sumbit">Save</button>
+        <button type="submit">Save</button>
     </form>
 </body>
 
