Modified the product page for input validation

--- a/views/Product.ejs
+++ b/views/Product.ejs
@@ -7,24 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        input {
-            size: 40;
-        }
+
     </style>
 </head>
 
 <body>
     <h1>Shto nje produkt te ri</h1>
-    <form action="/product" method="post">
-        <!--Form for input of product into db-->
-        <input type="text" placeholder="Product ID" name="product_id" size="15">
-        <input type="text" placeholder="Product Name" name="product_name" size="15">
-        <input type="text" placeholder="Product Amount Bought" name="product_bought" size="15">
-        <input type="text" placeholder="Product Price per Meter" name="product_price">
-        <input type="text" placeholder="Product Amount Sold" name="product_sold" size="15">
-        <input type="text" placeholder="Product Amount Remaining" name="product_remaining" size="21">
-        <button type="submit">Submit</button>
-    </form>
+
+    <% if(typeof alert !='undefined' ) { %>
+        <% alert.forEach(function(error) {%>
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <%= error.msg %>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <spana aria-hidden="true">&times;</span>
+                    </button>
+            </div>
+
+            <% }) %>
+                <% } %>
+
+                    <form action="/product" method="post">
+                        <!--Form for input of product into db-->
+                        <input type="text" placeholder="Product ID" name="product_id" size="15">
+                        <input type="text" placeholder="Product Name" name="product_name" size="15">
+                        <input type="text" placeholder="Product Amount Bought" name="product_bought" size="15">
+                        <input type="text" placeholder="Product Price per Meter" name="product_price">
+                        <input type="text" placeholder="Product Amount Sold" name="product_sold" size="15">
+                        <input type="text" placeholder="<Product Amount Remaining>" name="product_remaining" size="21">
+                        <button type="submit">Submit</button>
+                    </form>
 
 </body>
 
