--- a/views/updateRecords.ejs
+++ b/views/updateRecords.ejs
@@ -6,19 +6,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        input[type=text],
+        textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            resize: vertical;
+        }
+
+        label {
+            padding: 12px 12px 12px 0;
+            display: inline-block;
+        }
+
+        input[type=submit] {
+            background-color: blue;
+            color: blue;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            float: right;
+        }
+
+        input[type=submit]:hover {
+            background-color: #45a049;
+        }
+
+        .container {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
+
+        .col-25 {
+            float: left;
+            width: 25%;
+            margin-top: 6px;
+        }
+
+        .col-75 {
+            float: left;
+            width: 75%;
+            margin-top: 6px;
+        }
+
+        /* Clear floats after the columns */
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+        @media screen and (max-width: 600px) {
+
+            .col-25,
+            .col-75,
+            input[type=submit] {
+                width: 100%;
+                margin-top: 0;
+            }
+        }
+    </style>
 </head>
 
 <body>
     <form action="/updateRecords/<%=Product._id%>" method="POST">
-        <input type="text" placeholder="Product ID" value="<%= Product.productId%>" name="product_id" size="15">
-        <input type="text" placeholder="Product Name" value="<%= Product.productName%>" name="product_name" size="15">
-        <input type="text" placeholder="Product Amount Bought" value="<%= Product.productAmountBought%>"
-            name="product_bought" size="15">
-        <input type="text" placeholder="Product Price per Meter" value="<%= Product.productPricePerMeter%>"
-            name="product_price">
-        <input type="text" placeholder="Product Amount Sold" value="<%= Product.productAmountSold%>" name="product_sold"
-            size="15">
-        <button type="submit">Save</button>
+        <div class="container">
+            <div class="productID">
+                <label for="label">ProductID:</label>
+                <input type="text" placeholder="Product ID" value="<%= Product.productId%>" name="product_id" size="15">
+            </div>
+            <div class="prodcutName">
+                <label for="label">ProductName:</label>
+                <input type="text" placeholder="Product Name" value="<%= Product.productName%>" name="product_name"
+                    size="15">
+            </div>
+            <div class="productAmountBought">
+                <label for="label">Product Amount Bought:</label>
+                <input type="text" placeholder="Product Amount Bought" value="<%= Product.productAmountBought%>"
+                    name="product_bought" size="15">
+            </div>
+
+            <div class="productPricePerMeter">
+                <label for="label">Product Price Bought :</label>
+                <input type="text" placeholder="Product Price per Meter" value="<%= Product.productPricePerMeter%>"
+                    name="product_price">
+            </div>
+
+            <div class="productAmountSold">
+                <label for="label">Product Amount Sold :</label>
+                <input type="text" placeholder="Product Amount Sold" value="<%= Product.productAmountSold%>"
+                    name="product_sold" size="15">
+            </div>
+            <button type="submit">Save</button>
+        </div>
+
+
+
+
     </form>
 </body>
 
