Added login form that opens as soon as we request the website and validate the credentials

--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -48,6 +48,7 @@
 
             <li><a href="product">Add the product</a></li>
             <li><a href="list">See all the products</a></li>
+            <li><a href="logOut">Log out</a></li>
         </ul>
     </div>
 </body>
