--- a/views/Product.ejs
+++ b/views/Product.ejs
@@ -40,7 +40,7 @@
 </body>
 
 <footer>
-    <a href="/">Redirect To Homepage</a>
+    <a href="/Homepage">Redirect To Homepage</a>
 </footer>
 
 </html>
