--- a/views/list.ejs
+++ b/views/list.ejs
@@ -72,7 +72,7 @@
 
 </body>
 <footer>
-    <a href="/">Redirect To Homepage</a>
+    <a href="/Homepage">Redirect To Homepage</a>
 </footer>
 
 </html>
