--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -5,7 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.css" rel="stylesheet" />
+    <title>Log in</title>
+    <style>
+        .background-radial-gradient {
+            background-color: hsl(218, 41%, 15%);
+            background-image: radial-gradient(650px circle at 0% 0%,
+                    hsl(218, 41%, 35%) 15%,
+                    hsl(218, 41%, 30%) 35%,
+                    hsl(218, 41%, 20%) 75%,
+                    hsl(218, 41%, 19%) 80%,
+                    transparent 100%),
+                radial-gradient(1250px circle at 100% 100%,
+                    hsl(218, 41%, 45%) 15%,
+                    hsl(218, 41%, 30%) 35%,
+                    hsl(218, 41%, 20%) 75%,
+                    hsl(218, 41%, 19%) 80%,
+                    transparent 100%);
+        }
+
+        #radius-shape-1 {
+            height: 220px;
+            width: 220px;
+            top: -60px;
+            left: -130px;
+            background: radial-gradient(#44006b, #ad1fff);
+            overflow: hidden;
+        }
+
+        #radius-shape-2 {
+            border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+            bottom: -60px;
+            right: -110px;
+            width: 300px;
+            height: 100%;
+            background: radial-gradient(#44006b, #ad1fff);
+            overflow: hidden;
+        }
+
+        .bg-glass {
+            background-color: hsla(0, 0%, 100%, 0.9) !important;
+            backdrop-filter: saturate(200%) blur(25px);
+        }
+    </style>
 </head>
 
 <body>
@@ -18,29 +65,65 @@
                         <spana aria-hidden="true">&times;</span>
                     </button>
             </div>
-
             <% }) %>
                 <% } %>
                     <form action="/loginPage" method="post">
-                        <div class="container">
-                            <div class="username">
-                                <label for="label">Username</label>
-                                <input type="text" name="username" id="username">
-                            </div>
-                            <div class="password">
-                                <label for="label">Password</label>
-                                <input type="password" name="password" id="passwrod">
-                            </div>
-                            <button type="submit">Log in</button>
-                        </div>
+                        <section class="background-radial-gradient overflow-hidden">
+
+
+                            <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+                                <div class="row gx-lg-5 align-items-center mb-5">
+                                    <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+                                        <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+                                            Nuka Tex<br />
+                                            <span style="color: hsl(218, 81%, 75%)">Inventory Management</span>
+                                        </h1>
+                                    </div>
+
+                                    <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+                                        <div id="radius-shape-1"
+                                            class="position-absolute rounded-circle shadow-5-strong"></div>
+                                        <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+                                        <div class="card bg-glass">
+                                            <div class="card-body px-4 py-5 px-md-5">
+                                                <form>
+                                                    <!-- 2 column grid layout with text inputs for the first and last names -->
+                                                    <div class="row">
+                                                        <div class="col-md-6 mb-4">
+                                                            <div class="form-outline">
+                                                                <label class="form-label"
+                                                                    for="form3Example1">Username</label>
+                                                                <input type="text" id="form3Example1"
+                                                                    class="form-control" name="username" />
+
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-6 mb-4">
+                                                            <div class="form-outline">
+
+                                                                <label class="form-label"
+                                                                    for="form3Example2">Password</label>
+                                                                <input type="password" id="form3Example2"
+                                                                    class="form-control" name="password" />
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+
+                                                    <!-- Submit button -->
+                                                    <button type="submit" class="btn btn-primary btn-block mb-4">
+                                                        Log in
+                                                    </button>
+
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                        </section>
                     </form>
-
-
-
-
-
-
-
+                    <!-- Section: Design Block -->
 </body>
 
 </html>
