--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,7 +9,10 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+    </style>
 </head>
 
 <body>
@@ -47,8 +50,18 @@
                     <td>
                         <%= (products.productAmountBought - products.productAmountSold )%>
                     </td>
-                    <td><a class="ui purple button" href="/updateRecords/<%= products._id%>">Update</button>
-                    <td><a class="ui purple button" href="/delete/<%= products._id%>">Delete</button>
+                    <td><a class="ui purple button" href="/updateRecords/<%= products._id%>">
+                            <button type="button" class="btn btn-default" aria-label="Left Align">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </button>
+                        </a>
+
+                    <td>
+                        <a href=" /delete/<%=products._id%>">
+                            <button type="button" class="btn btn-default" aria-label="Left Align">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </button>
+                        </a>
 
                     </td>
                 </tr>
@@ -68,11 +81,16 @@
         </tbody>
     </table>
 
+    <a href="/Homepage">
+        <button type="button" class="btn btn-default" aria-label="Left Align">
+            <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+        </button>
+    </a>
 
 
 </body>
 <footer>
-    <a href="/Homepage">Redirect To Homepage</a>
+
 </footer>
 
 </html>
