--- a/views/Product.ejs
+++ b/views/Product.ejs
@@ -6,18 +6,150 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
+        html {
+            background-color: #597CFF;
+            box-sizing: border-box;
+        }
 
+        input[type=text],
+        textarea {
+            width: 70%;
+            margin-top: 20px;
+            padding: 13px;
+            border: 1px px solid #ccc;
+            border-radius: 4px;
+            resize: vertical;
+            background-color: white;
+        }
+
+        label {
+            color: #597CFF;
+            padding: 12px 12px 12px 0;
+            display: inline-block;
+
+        }
+
+        button[type=submit] {
+            background-color: #597CFF;
+            margin-left: 38%;
+            margin-top: 5%;
+            border-radius: 1px;
+            width: 21%;
+            font-size: 150%;
+        }
+
+        input[type=submit] {
+            background-color: 1BBA93;
+            color: 1BBA93;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            float: right;
+        }
+
+        input[type=submit]:hover {
+            background-color: #45a049;
+        }
+
+        .table-responsive {
+            background-color: white;
+            position: relative;
+            border-radius: 5px;
+            background-color: 66339;
+            padding: 41px;
+            padding-top: 127px;
+        }
+
+        .col-25 {
+            float: left;
+            width: 25%;
+            margin-top: 6px;
+        }
+
+        .col-75 {
+            float: left;
+            width: 75%;
+            margin-top: 6px;
+        }
+
+        .btn-default {
+            padding: 9px;
+            ;
+        }
+
+
+        /* Clear floats after the columns */
+        .row:after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        h1 {
+            text-align: center;
+            color: #597CFF;
+        }
+
+
+        /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+        @media screen and (max-width: 600px) {
+
+            .col-25,
+            .col-75,
+            input[type=submit] {
+                width: 100%;
+                margin-top: 0;
+            }
+
+            button[type=submit] {
+                background-color: #597CFF;
+                margin-left: 38%;
+                margin-top: 5%;
+                border-radius: 1px;
+                width: 21%;
+                font-size: 150%;
+            }
+
+        }
+
+        label {
+            width: 180px;
+            clear: left;
+            margin-top: 20px;
+            text-align: right;
+            padding-right: 10px;
+        }
+
+        input,
+        label {
+            float: left;
+        }
+
+        .alert alert-warning alert-dismissible fade show {
+            color: white;
+            background-color: white;
+        }
+
+        @media (max-width: 500px) {
+            header {
+                display: none;
+            }
+        }
     </style>
 </head>
 
 <body>
-    <h1>Shto nje produkt te ri</h1>
+
 
     <% if(typeof alert !='undefined' ) { %>
         <% alert.forEach(function(error) {%>
@@ -30,27 +162,55 @@
 
             <% }) %>
                 <% } %>
+                    <form action="/product" method="POST">
+                        <div class="table-responsive">
+                            <h1>Shto nje produkt te ri</h1>
+                            <div class="productID">
+                                <label for="label">ProductID:</label>
+                                <input type="text" name="product_id" size="15">
 
-                    <form action="/product" method="post">
-                        <!--Form for input of product into db-->
-                        <input type="text" placeholder="Product ID" name="product_id" size="15">
-                        <input type="text" placeholder="Product Name" name="product_name" size="15">
-                        <input type="text" placeholder="Product Amount Bought" name="product_bought" size="15">
-                        <input type="text" placeholder="Product Price per Meter" name="product_price">
-                        <input type="text" placeholder="Product Amount Sold" name="product_sold" size="15">
-                        <input type="text" placeholder="<Product Amount Remaining>" name="product_remaining" size="21">
-                        <button type="submit">Submit</button>
+                            </div>
+                            <div class="prodcutName">
+                                <label for="label">Emri i Produktit:</label>
+                                <input type="text" name="product_name" size="15">
+                            </div>
+                            <div class="productAmountBought">
+                                <label for="label">Sasia e Blere(metra):</label>
+                                <input type="text" name="product_bought" size="15">
+                            </div>
+
+                            <div class="productPricePerMeter">
+                                <label for="label">Cmimi per meter :</label>
+                                <input type="text" name="product_price">
+                            </div>
+
+                            <div class="productAmountSold">
+                                <label for="label">Sasia e shitur(metra) :</label>
+                                <input type="text" name="product_sold" size="15">
+                            </div>
+
+                            <div class="productAmountRemaining">
+                                <label for="label">Sasia e mbetur(metra) :</label>
+                                <input type="text" name="product_remaining" size="15">
+                            </div>
+                            <button type="submit">Save</button>
+                        </div>
+
+
+
+
                     </form>
-
-
-
-
 
                     <a href="/Homepage">
                         <button type="button" class="btn btn-default" aria-label="Left Align">
                             <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
                         </button>
                     </a>
+
+
+
+
+
 </body>
 
 
