--- a/views/Product.ejs
+++ b/views/Product.ejs
@@ -145,6 +145,11 @@
                 display: none;
             }
         }
+
+        .alert-warning {
+            background-color: white;
+            color: darkblue;
+        }
     </style>
 </head>
 
@@ -153,7 +158,7 @@
 
     <% if(typeof alert !='undefined' ) { %>
         <% alert.forEach(function(error) {%>
-            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <div class="alert alert-warning alert-dismissible" role="alert">
                 <%= error.msg %>
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <spana aria-hidden="true">&times;</span>
