--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -52,6 +52,11 @@
             background-color: hsla(0, 0%, 100%, 0.9) !important;
             backdrop-filter: saturate(200%) blur(25px);
         }
+
+        .alert-warning {
+            background-color: white;
+            color: darkblue;
+        }
     </style>
 </head>
 
