Changed names of labels

--- a/views/Product.ejs
+++ b/views/Product.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Add Product</title>
 
     <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
@@ -171,7 +171,7 @@
                         <div class="table-responsive">
                             <h1>Shto nje produkt te ri</h1>
                             <div class="productID">
-                                <label for="label">ProductID:</label>
+                                <label for="label">Product ID:</label>
                                 <input type="text" name="product_id" size="15">
 
                             </div>
