--- a/views/list.ejs
+++ b/views/list.ejs
@@ -21,11 +21,11 @@
         <thead>
             <tr>
                 <th scope="col">Product ID</th>
-                <th scope="col">Product Name</th>
-                <th scope="col">Product Amount Bought</th>
-                <th scope="col">Product Price per meter</th>
-                <th scope="col">Product Amount Sold</th>
-                <th scope="col">Product Amount Remaining</th>
+                <th scope="col">Emri i Produktit:</th>
+                <th scope="col">Sasia e Blere(metra):</th>
+                <th scope="col">Cmimi per meter </th>
+                <th scope="col">Sasia e shitur(metra) :</th>
+                <th scope="col">Sasia e mbetur(metra) :</th>
             </tr>
         </thead>
         <tbody>
