--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <style>
         html {
             background-color: white;
@@ -75,9 +76,9 @@
             <li>
 
             </li>
-            <li><a href="product">Add the product</a></li>
-            <li><a href="list">See all the products</a></li>
-            <li><a href="logOut">Log out</a></li>
+            <li><a href="product">Shto nje produkt</a></li>
+            <li><a href="list">Shiko listen e produkteve</a></li>
+            <li><a href="logOut">Dil <i class="bi bi-arrow-right"></i></a></li>
         </ul>
     </div>
 
