Final form of inventory management!

--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -18,7 +18,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #090633;
+            background-color: #597CFF;
         }
 
         li {
@@ -41,7 +41,7 @@
         .top {
             width: 101%;
             height: 100px;
-            background-color: #090633;
+            background-color: #597CFF;
             margin-top: -10px;
             margin-left: -10px;
             margin-bottom: 1px;
@@ -62,6 +62,15 @@
             font-size: 35px;
             padding: 2%;
         }
+
+
+        @media (max-width: 600px) {
+            ul {
+                float: none;
+            }
+
+
+        }
     </style>
 
 
@@ -71,7 +80,7 @@
 
 
     <div class="top">
-        <p id="title">Nuka-Tex</p>
+        <h1 id="title">Nuka-Tex</h1>
         <ul>
             <li>
 
