--- a/views/list.ejs
+++ b/views/list.ejs
@@ -11,14 +11,21 @@
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
+        .table .thead-dark th {
+            color: white;
+            background-color: #597CFF;
+            border-color: aliceblue;
+        }
     </style>
 </head>
 
 <body>
 
-    <table class="table">
-        <thead>
+    <table class="table table-bordered" class="table-responsive">
+        <thead class="thead-dark">
             <tr>
                 <th scope="col">Product ID</th>
                 <th scope="col">Emri i Produktit:</th>
@@ -26,6 +33,9 @@
                 <th scope="col">Cmimi per meter </th>
                 <th scope="col">Sasia e shitur(metra) :</th>
                 <th scope="col">Sasia e mbetur(metra) :</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+
             </tr>
         </thead>
         <tbody>
@@ -66,15 +76,6 @@
                     </td>
                 </tr>
                 <%})%>
-                    <!-- <% productsList.forEach(product=> {%>
-                                <tr>
-                                    <th scope="row">
-                                        <% product._id %>
-                                    </th>
-                                    
-                                </tr>
-
-                                <%})%> -->
 
 
 
