Fixing fonts and some features

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -18,6 +18,17 @@
             color: white;
             background-color: #597CFF;
             border-color: aliceblue;
+
+        }
+
+
+
+        .table {
+            font-size: 220%;
+        }
+
+        .glyphicon {
+            font-size: 22px;
         }
     </style>
 </head>
