--- a/views/Product.ejs
+++ b/views/Product.ejs
@@ -22,6 +22,7 @@
 
         input[type=text],
         textarea {
+            font-size: 18px;
             width: 70%;
             margin-top: 20px;
             padding: 13px;
